--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,12 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v4
 
+    - name: Debug npm build
+      working-directory: ./skylance-dashboard
+      run: |
+        npm install
+        npm run build
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
@@ -30,6 +36,8 @@ jobs:
         file: ./skylance-dashboard/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/skylance-frontend-final:latest
+        build-args: |
+          VITE_API_URL=${{ secrets.VITE_API_URL }}
 
     - name: SSH to DigitalOcean and Deploy
       uses: appleboy/ssh-action@v1.0.3
