--- a/skylance-dashboard/Dockerfile
+++ b/skylance-dashboard/Dockerfile
@@ -3,6 +3,9 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 # Copy package files first for caching npm install
 COPY package*.json ./
 RUN npm install
@@ -16,7 +19,7 @@ RUN npm run build
 # Stage 2: Serve with nginx
 FROM nginx:alpine
 
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
