--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/skylance-frontend-final:latest
         platforms: linux/amd64,linux/arm64
         build-args: |
-          VITE_API_URL=${{ secrets.VITE_API_URL }}
+          VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }}
 
     - name: SSH to DigitalOcean and Deploy
       uses: appleboy/ssh-action@v1.0.3
