--- a/skylance-dashboard/Dockerfile
+++ b/skylance-dashboard/Dockerfile
@@ -3,8 +3,8 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-ARG VITE_API_URL
-ENV VITE_API_URL=$VITE_API_URL
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 
 # Copy package files first for caching npm install
 COPY package*.json ./
