--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/skylance-frontend-final:latest
         platforms: linux/amd64,linux/arm64
         build-args: |
-          VITE_API_BASE_URL=http://146.190.97.82:5035/api
+          VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }}
 
     - name: SSH to DigitalOcean and Deploy
       uses: appleboy/ssh-action@v1.0.3
